@@ -1,4 +1,5 @@
 package com.bskoczylas.modelinglegalreasoning.domain.models.facade.logicApp.Weights;
+import com.bskoczylas.modelinglegalreasoning.domain.models.dataStructures.Pair;
 import com.bskoczylas.modelinglegalreasoning.domain.models.facade.logicApp.observables.ScaleObservable;
 import com.bskoczylas.modelinglegalreasoning.domain.models.facade.logicApp.observers.ScaleObserver;
 
@@ -6,39 +7,36 @@ import java.util.ArrayList;
 import java.util.List;
 
 public class Scale implements ScaleObservable {
-    private List<Integer> elements = new ArrayList<>();
-    private List<ScaleObserver> observers;
+    private Pair<Integer, Integer> elements;
+    private List<ScaleObserver> observers = new ArrayList<>();
 
     public Scale(int min_value, int max_value) {
-        this.observers = new ArrayList<>();
         setScale(min_value, max_value);
     }
 
     public Scale(){setScale(0, 10);}
+
     public boolean contains(int value) {
-        return elements.contains(value);
+        return value >= elements.getFirst() && value <= elements.getSecond();
     }
 
     public void setScale(int min_value, int max_value) {
-        elements.clear();
-        for (int i = min_value; i <= max_value; i++) {
-            elements.add(i);
-        }
+        elements = new Pair<>(min_value, max_value);
         notifyObservers();
     }
 
     public int getMin() {
-        if (elements.isEmpty()) {
+        if (elements == null) {
             throw new IllegalStateException("Scale is empty");
         }
-        return elements.get(0);
+        return elements.getFirst();
     }
 
     public int getMax() {
-        if (elements.isEmpty()) {
+        if (elements == null) {
             throw new IllegalStateException("Scale is empty");
         }
-        return elements.get(elements.size() - 1);
+        return elements.getSecond();
     }
 
     @Override
